--- a/pages/component/familyInfo/familyInfo.wxml
+++ b/pages/component/familyInfo/familyInfo.wxml
@@ -47,17 +47,17 @@
       <view class="my_input">
         <picker mode="region" value="" custom-item="{{customItem}}" bindchange="bindRegionChange">
           <view class="area">
-            <text>所在地区：</text>
-            <view style="width: 500rpx; text-align: right;">{{region}}</view>
+            <text style="color:black">所在地区：</text>
+            <view style="width: 500rpx; text-align: right;color:black">{{region}}</view>
           </view>
         </picker>
         <mp-icon icon="arrow" size="{{8}}" color="#BEC2CB "></mp-icon>
       </view>
-    <view class="my_input" style="text-align: right;">
+    <view class="my_input" style="text-align: right;color:black">
       <text>电力户号：</text>
       <input class="input" name="electricityNumber" placeholder="请输入电力户号" value="{{electricityNumber}}" type="text"/>
     </view>
-    <view class="my_input" style="text-align: right;">
+    <view class="my_input" style="text-align: right;color:black">
       <text>房屋面积：</text>
       <input class="input" name="area" placeholder="请输入房屋面积" value="{{area}}" type="text"/>
       <text style="margin-left: 10rpx; color: #000000;">m²</text>
@@ -65,14 +65,51 @@
 
     <!-- 户型 -->
     <view class="my_input">
-        <picker mode="multiSelector" value="{{multiIndex}}" range="{{houseType}}" bindchange="changeHouseType">
+        <picker mode="multiSelector" value="" range="{{houseType}}" range-key="name" bindchange="changeHouseType">
           <view class="area">
-            <text>房屋户型：</text>
-            <view style="width: 500rpx; text-align: right;">{{houseType[0][multiIndex[0]]}},{{houseType[1][multiIndex[1]]}}, {{houseType[2][multiIndex[2]]}}, {{houseType[3][multiIndex[3]]}}, {{houseType[4][multiIndex[4]]}}</view>
+            <text style="color:black">房屋户型：</text>
+            <view style="width: 500rpx; text-align: right;color:black">{{houseType[0][multiIndex[0]].name}} {{houseType[1][multiIndex[1]].name}} {{houseType[2][multiIndex[2]].name}} {{houseType[3][multiIndex[3]].name}} {{houseType[4][multiIndex[4]].name}}</view>
           </view>
         </picker>
         <mp-icon icon="arrow" size="{{8}}" color="#BEC2CB "></mp-icon>
-      </view>
+    </view>
+    <!-- 性别 -->
+    <view class="my_input">
+      <picker mode="selector" value="" range="{{maleArr}}" range-key="name" bindchange="bindMaleChange">
+        <view class="area">
+          <text style="color:black">性别：</text>
+          <view style="text-align: right;width:560rpx;color:black">{{maleArr[idx].name}}</view>
+        </view>
+      </picker>
+        <mp-icon icon="arrow" size="{{8}}" color="#BEC2CB "></mp-icon>
+    </view>
+    <!-- 年龄段 -->
+    <view class="my_input">
+      <picker mode="selector" value="" range="{{ageArr}}" range-key="name" bindchange="bindAgeChange">
+        <view class="area">
+          <text style="color:black">年龄段：</text>
+          <view style="width: 540rpx; text-align: right;color:black">{{ageArr[ageIdx].name}}</view>
+        </view>
+      </picker>
+        <mp-icon icon="arrow" size="{{8}}" color="#BEC2CB "></mp-icon>
+    </view>
+    <!-- 家庭人口 -->
+     <view class="my_input" style="text-align: right;color:black">
+      <text>家庭人口：</text>
+      <input class="input" name="population" placeholder="请输入家庭人口" value="{{population}}" type="text"/>
+    </view>
+  <!-- 家庭收入 -->
+  <view class="my_input">
+      <picker mode="selector" value="" range="{{incomeArr}}" range-key="name" bindchange="bindIncomeChange">
+        <view class="area">
+          <text style="color:black">家庭收入：</text>
+          <view style="width: 520rpx; text-align: right;color:black">{{incomeArr[incomeIdx].name}}</view>
+        </view>
+      </picker>
+        <mp-icon icon="arrow" size="{{8}}" color="#BEC2CB "></mp-icon>
+    </view>
+
+
 
        <button type="primary" formType="submit" class="my_btn">保存</button>
   </form>
