--- a/pages/component/goodsInfo/goods/goods.wxss
+++ b/pages/component/goodsInfo/goods/goods.wxss
@@ -26,6 +26,7 @@
   padding: 16rpx 0 18rpx 0;
   color: #E02020;
   font-size: 56rpx;
+  font-weight: bold;
 }
 
 .del_price {
@@ -88,35 +89,45 @@
 }
 
 .btn_contact {
-  padding: 0 !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background-color: inherit !important;
 }
 
 .flex_contact {
-  width: 100%;
+  width: 90%;
   position: fixed;
   bottom: 0;
   left: 0;
   background-color: #ffffff;
-  padding: 20rpx 0;
+  padding: 14rpx 32rpx;
 }
 
 .btm_cart {
-  width: 60rpx; 
-  height: 60rpx; 
+  width: 40rpx; 
+  height: 40rpx; 
   display: block; 
   margin: 0 auto;
 }
 
 .cart_badge {
   position: absolute; 
-  right: 0; 
-  top: -20rpx;
+  right: 24rpx; 
+  top: -24rpx;
 }
 
 .btm_btn {
   margin: 0 15rpx; 
-  border-radius: 40rpx;
-  font-size: 15px;
+  border-radius: 48rpx;
+  font-size: 32rpx;
+  color: #ffffff;
+  background-color: #E2D0CE;
+}
+
+.my_warn {
+  background-image: linear-gradient(99deg, #FC3A3A 0%, #E12828 97%);
 }
 
 .dialog {
@@ -201,6 +212,10 @@
 .my_detailname {
   padding: 28rpx 0 16rpx 0;
   font-size: 32rpx;
+  width: 96%;
+  white-space: normal;
+  word-break: break-all;
+  font-weight: bold;
 }
 
 .weui-cells__title {
@@ -220,4 +235,13 @@
   height: 32rpx;
   margin-bottom: -7rpx;
   margin-right: 10rpx;
+}
+
+.to_cart {
+  position: relative; 
+  width: 20%;
+  height: 80rpx;
+  line-height: 80rpx;
+  display:flex;
+  align-items:center;
 }
