--- a/pages/component/search/search.wxml
+++ b/pages/component/search/search.wxml
@@ -1,7 +1,7 @@
 <!--pages/component/search/search.wxml-->
 <view>
   <view class="wrap">
-    <image src="../../../resources/img/search.png" class="wrap_img"/>
+    <mp-icon icon="search" size="{{20}}" color="#999999"></mp-icon>
     <input class="wrap_input" type="text" confirm-type="search" bindconfirm="bindconfirm" placeholder="请输入商品名" value=""/>
   </view>
 </view>
