--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,22 +1,31 @@
 <!--pages/login/login.wxml-->
-<view>
-  <view class="logo">
-    <image style="width: 100%; height: 100%;" src="" />
+<view class="page">
+  <view class="login_bg">
+    <image class="login_img" src="../../resources/img/login_bg.png" mode="widthFix"/>
   </view>
-  <view>
-   <button open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" class="login_btn btn" style="display: flex; align-items: center; justify-content: center;">
-      <image class="weixin" src="../../resources/img/weixin.png" />
-      微信登录
-    </button>
-    <button class="login_btn btn" bindtap="telLogin">手机登录</button>
-  </view>
-  <mp-dialog title="" show="{{isShow}}" buttons="{{oneButton}}" bindbuttontap="tapDialogBtn" ext-class="my_dialog">
-    <view style="width: 500rpx;">
-      <input placeholder="输入手机号码" type="number" bindinput="phoneInput"  class="tel_input" value="{{phone}}" />
-      <view>
-        <input placeholder="短信验证码" type="number" bindinput="codeInput" class="tel_input" value="{{code}}" />
-        <button bindtap="sendBtn" type="{{btnType}}" size="mini" disabled="{{isDisable}}">{{btnIner}}</button>
-      </view>
+
+  <view class="content">
+    <view class="logo">
+      <image class="logo_img" style="width: 100%; height: 100%;" src="../../resources/img/logo.png" />
     </view>
-  </mp-dialog>
+    <view>
+      <button open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" class="login_btn btn">
+        <image class="weixin" src="../../resources/img/weixin.png" />
+        微信登录
+      </button>
+      <button class="login_btn" bindtap="telLogin">
+        <image class="weixin cellphone" src="../../resources/img/cellphone.png" />
+        手机号登录
+      </button>
+    </view>
+    <mp-dialog title="" show="{{isShow}}" buttons="{{oneButton}}" bindbuttontap="tapDialogBtn" ext-class="my_dialog">
+      <view style="width: 500rpx;">
+        <input placeholder="输入手机号码" type="number" bindinput="phoneInput"  class="tel_input" value="{{phone}}" />
+        <view>
+          <input placeholder="短信验证码" type="number" bindinput="codeInput" class="tel_input" value="{{code}}" />
+            <button bindtap="sendBtn" type="{{btnType}}" size="mini" disabled="{{isDisable}}">{{btnIner}}</button>
+          </view>
+        </view>
+      </mp-dialog>
+  </view>
 </view>
