--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,32 +1,66 @@
 /* pages/login/login.wxss */
+.page {
+  height: 100vh;
+  position: relative;
+  padding-top: 150rpx;
+}
+
+.login_bg {
+  position: absolute;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.login_img {
+  width: 100%;
+  height: 100%;
+}
+
+.content {
+  position: relative;
+}
+
 .logo {
-  width: 300rpx;
-  height: 300rpx;
-  border-radius: 50%;
-  margin: 0 auto;
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 15rpx;
+  margin: 0 auto 100rpx;
+  background-color: #ffffff;
+  overflow: hidden;
 }
 
 .login_btn {
-  width: 90%;
+  width: 70% !important;
   height: 100rpx;
   line-height: 100rpx;
-  border: 1px solid lightgrey;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 30rpx;
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+  border-radius: 52rpx !important;
+  padding: 0 !important;
+  background-color: inherit;
+  border: 1px solid lightgrey;
+  color: #ffffff;
 }
 
 .weixin {
-  width: 80rpx;
-  height: 80rpx;
+  width: 40rpx;
+  height: 40rpx;
   margin-right: 20rpx;
+  margin-bottom: -5rpx;
+}
+
+.cellphone {
+  width: 30rpx;
 }
 
 .btn {
-  width: 90% !important;
-  background-color: inherit !important;
-  border-radius: 0 !important;
-  padding: 0 !important;
+  background-color: rgb(119, 77, 187) !important;
 }
 
 .tel_input {
