--- a/pages/mine/myAddress/addAddress/addAddress.wxss
+++ b/pages/mine/myAddress/addAddress/addAddress.wxss
@@ -44,9 +44,14 @@
 }
 
 .my_btn {
-  height: 88rpx;
+  /* height: 88rpx; */
   width: 90% !important;
   color: #BEC2CB;
   font-size: 32rpx;
   border-radius: 200rpx;
+  vertical-align: middle;
+  padding: 21rpx 24rpx;
+}
+.phcolor{
+  color:#BEC2CB;
 }
