--- a/pages/mine/myOrder/myOrder.wxss
+++ b/pages/mine/myOrder/myOrder.wxss
@@ -11,6 +11,7 @@
   font-size: 32rpx;
   background-color: #ffffff;
   border-bottom: 16rpx solid #F5F5F5;
+  padding: 0 20rpx;
 }
 
 .tab_text {
@@ -30,11 +31,26 @@
   margin-bottom: 16rpx;
 }
 
-.content_top, .content_mid, .content_btm {
+.content_top, .content_mid {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 18rpx 30rpx;
+}
+
+.content_btm {
+  padding: 18rpx 30rpx;
+}
+
+.btm_price {
+  text-align: right;
+}
+
+.btn_box {
+  display: flex; 
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 20rpx;
 }
 
 .content_top, .content_mid {
@@ -68,16 +84,17 @@
 }
 
 .btn {
-  width: 96rpx;
+  min-width: 96rpx;
   height: 28rpx;
   border: 1px solid lightgrey;
   border-radius: 40rpx;
   font-size: 24rpx;
   padding: 10rpx 16rpx;
   text-align: center;
-  line-height: 30rpx;
+  line-height: 28rpx;
   color: black;
   margin: 0 7rpx;
+  white-space: nowrap;
 }
 
 .btn2 {
@@ -101,3 +118,7 @@
 .color_PAID { color: #71B925; }
 .color_RECEIVED { color: #868A92; }
 .color_DELIVERED { color: #333333; }
+
+.weui-dialog {
+  width: 90% !important;
+}
