--- a/pages/mine/myOrder/orderInfor/myService/refund/refundDetail/refundDetail.wxss
+++ b/pages/mine/myOrder/orderInfor/myService/refund/refundDetail/refundDetail.wxss
@@ -2,18 +2,25 @@
 .top {
   font-size: 32rpx;
   color: #ffffff;
-  background-image: linear-gradient(90deg, #EF556B 0%, #D9444F 100%);
   padding: 32rpx;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   border-bottom: 34rpx solid #F5F5F5;
   height: 130rpx;
+  position: relative;
+}
+
+.top_text {
+  position: absolute;
+  z-index: 999;
 }
 
 .top_img {
-  width: 106rpx;
-  height: 106rpx;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .mid {
